test/errmsg/incomplete-struct-variable.c
// incomplete-struct-variable.c
// Try to declare a variable whose type is an incmplete struct.

struct S s = { 1,2 };

// EOF
